--- a/styles.css
+++ b/styles.css
@@ -8,64 +8,104 @@ body {
   background-repeat: no-repeat;  
   background-attachment: fixed; /* optional, for a fixed background */
   background-size: cover; /* or contain */
-
   display: block;
-}
-h2{
-    color: white;
-    padding: 0 0 0 50px;
-}
-ul{
-    color: white;
-    padding: 0 50px 0px 50px;
 }
 
 .wrapper{
   filter: drop-shadow(-3px -3px 10px gray);
 }
 
-  .container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-left: 370px;
-    margin-right: 370px;
-    margin-top: 117px;
-    margin-bottom: 117px;
-    clip-path: polygon(88% 0, 100% 17%, 100% 100%, 12% 100%, 0% 88%, 0 0);
-    height: 29rem;
+.container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-left: 370px;
+  margin-right: 370px;
+  margin-top: 117px;
+  margin-bottom: 117px;
+  clip-path: polygon(88% 0, 100% 17%, 100% 100%, 12% 100%, 0% 88%, 0 0);
+  /*height: 29rem;*/
+  height: 582px;
+  width: 761px;
+}
 
-  }
+.form-container {
+  align-items: center;
+  flex: 1;
+  padding: 40px 50px;
+  background-color: white;
+}
 
-  .form-container {
-    align-items: center;
-    flex: 1;
-    padding: 20px;
-    background-color: white;
-  }
-  .form-container h2{
-    color: black;
-  }
+.form-container h2{
+  color: black;
+}
 
-  .text-container {
-    flex: 1;
-    padding: 20px;
-    background:url(image1.png);
-  }
+.form-container label {
+  margin-bottom: 30px;
+  color: #000;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
 
+.form-container input[type="radio"] {
+  width: auto; 
+  height: auto;
+  margin: 6px 0px 30px 21px;
+}
+
+input{
+  width: 291px;
+  height: 42px;
+  flex-shrink: 0;
+  padding: 4px;
+  box-sizing: border-box;
+  width: 100%;
+  margin-bottom: 30px;
+  border-radius: 4px;
+  border: 2px solid #BDBDBD;
+  background: #FFF;
+}
+
+.text-container {
+  flex: 1;
+  padding: 50px;
+  background:url(image1.png);
+}
+
+.text-container h2{
+  color: white;
+  padding: 45px 0 0 0px;
+  font-size: 34px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin: 0;
+}
   
-  button{
-    width: 188px;
-    height: 44px;
-    background-color: #2D9CDB;
-    border: none;
-    color: white;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-  }
+ul{
+  color: white;
+  padding: 0;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+  
+button{
+  width: 188px;
+  height: 44px;
+  background-color: #2D9CDB;
+  border: none;
+  color: white;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
 
   @media screen and (max-width: 768px) {
     body{
@@ -76,6 +116,7 @@ ul{
       filter: none;
     }
     .container {
+      width: auto;
       height: 48rem;
       flex-direction: column;
       margin-bottom: 160px;
@@ -89,14 +130,22 @@ ul{
     .text-container {
       margin: 0;
     }
-  
+
+    .text-container h2 {
+      color: white;
+      padding: 15px 0 0 25px;
+  }
+  .text-container ul {
+    padding: 0 25px;
+}
     .text-container{
       flex: 1;
+      padding: 0;
     }
 
     .form-container{
       flex: 2;
-      
+      padding: 25px 50px;
     }
 
     button {
